--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
 
 	<!-- Content goes here -->
 
+	<!-- Logo  -->
 	<div class="d-flex">
 		<img src="images/carved-rock-logo-black.png"  class="logo">
 	</div>
 
-	<!-- <div class="d-flex">
+	<!-- Banner -->
+	<div class="d-flex flex-row banner">
+
+	</div>
+
+	<!-- <div class="d-flex flex-row">
 			<div class="testBox">Test 1</div>
 			<div class="testBox">Test 2</div>
 			<div class="testBox">Test 3</div>
-		</div> -->	
+	</div> 	 -->
 
 	<!-- Bootstrap Files -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
