Using Bootstrap Built-in Sizes

--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@
 		</div>
 	</div>
 
+	<!-- Text and Image -->
+		<div class="d-flex">
+			<div class="w-25">
+				<img src="images/shutterstock_422560537.jpg" class="img-fluid">
+			</div>
+			<div class="w-75">
+				<h4>Title Section</h4>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aperiam debitis cumque quaerat hic error ipsum ad ut ducimus animi, laudantium eos qui doloribus quos corporis enim, maxime ex sunt, quia temporibus? Maxime nisi ab, error, sint sunt nobis illo dolorum odit distinctio voluptatibus molestias harum aspernatur laudantium! Quam, laudantium.</p>
+				<a href="#" class="btn btn-primary">Learn More</a>
+			</div>
+		</div>
+
+		<div class="d-flex bottomArea">
+			<div class="w-60">
+				<img src="images/carved-rock-logo-white.png" class="img-fluid h-25">
+				<h5>About Us</h5>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci facere voluptatibus nemo eaque at nostrum ad commodi quod quis dolorum maxime dolore, quos distinctio enim ab ipsa ratione ducimus dicta facilis! Excepturi amet sunt officiis, omnis dolorum hic cum voluptates. Exercitationem modi reprehenderit ducimus. Sequi alias cupiditate accusantium id blanditiis!</p>
+			</div>
+			<div class="d-flex flex-column">
+				<h5>Contact Us:</h5>
+				<div>123 Cookies Design St</div>
+				<div>555-555-555</div>
+				<div>contactocookiesdesign@gmail.com</div>
+			</div>
+		</div>
+
     <!-- <div class="d-flex flex-row">
 			<div class="testBox">Test 1</div>
 			<div class="testBox">Test 2</div>
