--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Content goes here -->
 
 	<!-- Logo  -->
-	<div class="d-flex">
+	<div class="d-flex justify-content-center">
 		<img src="images/carved-rock-logo-black.png"  class="logo">
 	</div>
 
@@ -26,7 +26,7 @@
 	</div>
 
 	<!-- Cards -->
-	<div class="d-flex">
+	<div class="d-flex justify-content-around">
 		<div class="callOuts d-flex-column">
 			<img src="images/shoe_Blue.png" class="d-block">
 			<h3>Climbing</h3>
