--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<!-- Logo  -->
 	<div class="d-flex justify-content-center">
-		<img src="images/carved-rock-logo-black.png"  class="logo">
+		<img src="images/carved-rock-logo-black.png"  class="logo p-3">
 	</div>
 
 	<!-- Banner -->
@@ -26,18 +26,18 @@
 	</div>
 
 	<!-- Cards -->
-	<div class="d-flex justify-content-around">
-		<div class="callOuts d-flex-column">
+	<div class="d-flex justify-content-around my-3 px-5 text-center">
+		<div class="callOuts d-flex-column p-4 m-2">
 			<img src="images/shoe_Blue.png" class="d-block">
 			<h3>Climbing</h3>
 			<p>Get your climbing shoes ready!</p>
 		</div>
-		<div class="callOuts d-flex-column">
+		<div class="callOuts d-flex-column p-4 m-2">
 			<img src="images/mountain_Blue.png" class="d-block">
 			<h3>Running</h3>
 			<p>Run away from your troubles!</p>
 		</div>
-		<div class="callOuts d-flex-column"> 
+		<div class="callOuts d-flex-column p-4 m-2"> 
 			<img src="images/bicycle_Blue.png" class="d-block">
 			<h3>Bicycling</h3>
 			<p>Running not fast enough? Get a bike.</p>
@@ -45,30 +45,30 @@
 	</div>
 
 	<!-- Text and Image -->
-		<div class="d-flex align-items-center">
-			<div class="w-25">
+		<div class="d-flex align-items-center px-5 mb-3">
+			<div class="w-25 mr-3">
 				<img src="images/shutterstock_422560537.jpg" class="img-fluid">
 			</div>
-			<div class="w-75">
+			<div class="w-75 p-3">
 				<h4>Title Section</h4>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aperiam debitis cumque quaerat hic error ipsum ad ut ducimus animi, laudantium eos qui doloribus quos corporis enim, maxime ex sunt, quia temporibus? Maxime nisi ab, error, sint sunt nobis illo dolorum odit distinctio voluptatibus molestias harum aspernatur laudantium! Quam, laudantium.</p>
 				<a href="#" class="btn btn-primary">Learn More</a>
 			</div>
 		</div>
 
-<!-- 		<div class="d-flex flex-row testRow">
+	<!--  <div class="d-flex flex-row testRow">
 			<div class="testBox">Test 1</div>
 			<div class="testBox align-self-center">Test 2</div>
 			<div class="testBox">Test 3</div>
-		</div> 	  -->
+		  </div> 	  -->
 
-		<div class="d-flex bottomArea">
+		<div class="d-flex bottomArea p-3">
 			<div class="w-60">
 				<img src="images/carved-rock-logo-white.png" class="img-fluid h-25">
 				<h5>About Us</h5>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci facere voluptatibus nemo eaque at nostrum ad commodi quod quis dolorum maxime dolore, quos distinctio enim ab ipsa ratione ducimus dicta facilis! Excepturi amet sunt officiis, omnis dolorum hic cum voluptates. Exercitationem modi reprehenderit ducimus. Sequi alias cupiditate accusantium id blanditiis!</p>
 			</div>
-			<div class="d-flex flex-column">
+			<div class="d-flex flex-column mt-3">
 				<h5>Contact Us:</h5>
 				<div>123 Cookies Design St</div>
 				<div>555-555-555</div>
