--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 	<!-- Cards -->
 	<div class="d-flex justify-content-around my-3 px-5 text-center">
 		<div class="callOuts d-flex-column p-4 m-2 flex-fill">
-			<img src="images/shoe_Blue.png" class="d-block">
+			<img src="images/shoe_Blue.png" class="d-block mx-auto">
 			<h3>Climbing</h3>
 			<p>Get your climbing shoes ready!</p>
 		</div>
 		<div class="callOuts d-flex-column p-4 m-2 flex-fill">
-			<img src="images/mountain_Blue.png" class="d-block">
+			<img src="images/mountain_Blue.png" class="d-block mx-auto">
 			<h3>Running</h3>
 			<p>Run away from your troubles!</p>
 		</div>
 		<div class="callOuts d-flex-column p-4 m-2 flex-fill"> 
-			<img src="images/bicycle_Blue.png" class="d-block">
+			<img src="images/bicycle_Blue.png" class="d-block mx-auto">
 			<h3>Bicycling</h3>
 			<p>Running not fast enough? Get a bike.</p>
 		</div>
@@ -56,11 +56,11 @@
 			</div>
 		</div>
 
-		<div class="d-flex flex-row testRow">
-			<div class="testBox w-100">Test 1</div>
-			<div class="testBox ">Test 2</div>
-			<div class="testBox flex-shrink-1">Test 3</div>
-		</div>
+		<!-- <div class="d-flex flex-row testRow">
+			<div class="testBox ">Test 1</div>
+			<div class="testBox mx-auto ">Test 2</div>
+			<div class="testBox ">Test 3</div>
+		</div> -->
 
 		<div class="d-flex bottomArea p-3">
 			<div class="w-60">
